Fixed additional padding on right hand side of screens on mobile and tablet

--- a/src/Cadenza/Cadenza/wwwroot/css/layout.scss
+++ b/src/Cadenza/Cadenza/wwwroot/css/layout.scss
@@ -68,7 +68,7 @@ div.tab-grid {
     height: 100%;
     padding: 0;
     margin: 0;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 @media (min-width: #{$screen-md-min}) {
@@ -84,7 +84,7 @@ div.tab-grid-col {
     margin: 0;
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 @media (min-width: #{$screen-md-min}) {
